# magpie-retro

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  HOW_TO_RUN_GAME_PAIRS.md  MODULE.bazel  Makefile  OPTIMIZATION_IDEAS.md  PLAN-score-in-eighths.md  PROJECT_PLAN.md  README.md  SHADOW_DEBUG_PLAN.md  SHADOW_DEBUG_STATUS.md  STATIC_EVAL_RESULTS.md  linker.ld  linker_debug.ld  test_batch.c  test_gamepairs.c  test_native.c
.github/workflows/: pages.yml  rom-test.yml  speed-test.yml  test.yml
cfg/: genesis.cfg
data/: CSW24.klv16  NWL23.klv16
docs/: CSW24_PROFILING.md  OPTIMIZATION_IDEAS.md  PROFILING.md  emulator.js  index.html
docs/mockup/: genesis-ui.html
docs/play/: emulator.js  index.html  style.css
docs/play/roms/: README.txt
inc/: BUILD.bazel  anchor.h  bit_tables.h  equity.h  klv.h  kwg.h  scrabble.h
profiles/: csw24-shadow.profile.json  noshadow.txt
scripts/: download_fonts.sh
src/: BUILD.bazel  bit_tables.c  board.c  boot.s  font_4x6.c  font_5x7.c  font_6x10.c  font_6x9.c  font_everex_5x8.c  font_five_pixel.c  font_tom_thumb.c  game.c  graphics.c  klv.c  kwg.c  libc.c  main.c  movegen.c
test/: minimal.s
tests/: test_klv.c  verify_klv16.py
tests/gxtest/: BUILD.bazel  klv.cpp  klv.h  klv_test.cpp  scrabble_profile_test.cpp  scrabble_symbols.h  scrabble_test.cpp  scrabble_timing_report.cpp  scrabble_timing_test.cpp
tools/: BUILD.bazel  disassembly.bzl  extract_five_pixel_font.py  font_browser.py  font_extract.py  genesis.bzl  klv2_to_klv16.py  klv2c.py  kwg2c.py  split_asm.py
