# Scrabble for Sega Genesis - Main BUILD file

load("//tools:disassembly.bzl", "disassembly_site")

package(default_visibility = ["//visibility:public"])

# ---------------------------------------------------------------------------
# Pre-built ROMs (built via make, referenced as data)
# ---------------------------------------------------------------------------

# To build ROMs: run `make` in the project root first
# These filegroups reference the pre-built ROM files

exports_files([
    "out/scrabble-nwl23-shadow.bin",
    "out/scrabble-nwl23-noshadow.bin",
    "out/scrabble-csw24-shadow.bin",
    "out/scrabble-csw24-noshadow.bin",
    "build/nwl23-shadow/scrabble.elf",
    "build/nwl23-noshadow/scrabble.elf",
    "build/csw24-shadow/scrabble.elf",
    "build/csw24-noshadow/scrabble.elf",
    # Debug builds (with DWARF symbols for disassembly)
    "build/nwl23-shadow-debug/scrabble.elf",
    "build/csw24-shadow-debug/scrabble.elf",
    # Timing builds (with COLLECT_MOVE_STATS instrumentation)
    "out/scrabble-nwl23-shadow-timing.bin",
    "out/scrabble-csw24-shadow-timing.bin",
    "out/scrabble-nwl23-noshadow-timing.bin",
    "out/scrabble-csw24-noshadow-timing.bin",
    "out/scrabble-nwl23-hybrid-timing.bin",
    "out/scrabble-csw24-hybrid-timing.bin",
    "build/nwl23-shadow-timing/scrabble.elf",
    "build/csw24-shadow-timing/scrabble.elf",
    "build/nwl23-noshadow-timing/scrabble.elf",
    "build/csw24-noshadow-timing/scrabble.elf",
    "build/nwl23-hybrid-timing/scrabble.elf",
    "build/csw24-hybrid-timing/scrabble.elf",
    # KLV data files
    "data/NWL23.klv16",
    "data/CSW24.klv16",
])

filegroup(
    name = "roms_nwl23",
    srcs = [
        "out/scrabble-nwl23-shadow.bin",
        "out/scrabble-nwl23-noshadow.bin",
    ],
)

filegroup(
    name = "roms_csw24",
    srcs = [
        "out/scrabble-csw24-shadow.bin",
        "out/scrabble-csw24-noshadow.bin",
    ],
)

filegroup(
    name = "all_roms",
    srcs = [
        ":roms_nwl23",
        ":roms_csw24",
    ],
)

# Note: Symbols header is in tests/gxtest/scrabble_symbols.h
# To regenerate: m68k-elf-nm -n build/nwl23-shadow/scrabble.elf | python3 gxtest/tools/elf2sym.py --namespace Scrabble > tests/gxtest/scrabble_symbols.h

# ---------------------------------------------------------------------------
# Source files (for disassembly)
# ---------------------------------------------------------------------------

filegroup(
    name = "genesis_sources",
    srcs = glob([
        "src/*.c",
        "src/*.s",
        "inc/*.h",
    ]),
)

# ---------------------------------------------------------------------------
# Disassembly Explorer Sites
# ---------------------------------------------------------------------------
#
# These generate browsable HTML sites with mixed C/assembly listings.
# Useful for:
#   - AI agents reviewing generated code
#   - Performance analysis
#   - Understanding compiler output
#
# Build with: bazel build //:disasm_nwl23_shadow
# Output: bazel-bin/disasm_nwl23_shadow/ (directory with HTML files)
#
# IMPORTANT: The ELF files must be built with debug symbols (-g).
# Run `make` first to generate the ELF files, then run bazel.

# Debug builds (with DWARF symbols - recommended for disassembly)
# Build these first: make debug-builds
disassembly_site(
    name = "disasm_nwl23_shadow",
    binary = "build/nwl23-shadow-debug/scrabble.elf",
    srcs = [":genesis_sources"],
)

disassembly_site(
    name = "disasm_csw24_shadow",
    binary = "build/csw24-shadow-debug/scrabble.elf",
    profile = "profiles/csw24-shadow.profile.json",
    srcs = [":genesis_sources"],
)

# Release builds (no DWARF - assembly only, no C source interleaving)
disassembly_site(
    name = "disasm_nwl23_shadow_release",
    binary = "build/nwl23-shadow/scrabble.elf",
    srcs = [":genesis_sources"],
)

disassembly_site(
    name = "disasm_csw24_shadow_release",
    binary = "build/csw24-shadow/scrabble.elf",
    srcs = [":genesis_sources"],
)

# ---------------------------------------------------------------------------
# Play Site (EmulatorJS-based web emulator)
# ---------------------------------------------------------------------------
#
# Builds the web-based emulator site with ROMs included.
# Prerequisite: Run `make nwl23-shadow csw24-shadow` first to build ROMs.
#
# Build with: bazel build //:play_site
# Output: bazel-bin/play_site/ (directory ready for GitHub Pages)
#
# To deploy: copy contents of bazel-bin/play_site/ to docs/play/
# Or run: bazel build //:play_site && cp -r bazel-bin/play_site/* docs/play/

genrule(
    name = "play_site",
    srcs = [
        "docs/play/emulator.js",
        "docs/play/index.html",
        "docs/play/style.css",
        "out/scrabble-nwl23-shadow.bin",
        "out/scrabble-csw24-shadow.bin",
    ],
    outs = [
        "play_site/index.html",
        "play_site/style.css",
        "play_site/emulator.js",
        "play_site/roms/shadow-nwl.bin",
        "play_site/roms/shadow-csw.bin",
    ],
    cmd = """
        mkdir -p $(@D)/play_site/roms
        cp $(location docs/play/index.html) $(@D)/play_site/index.html
        cp $(location docs/play/style.css) $(@D)/play_site/style.css
        cp $(location docs/play/emulator.js) $(@D)/play_site/emulator.js
        cp $(location out/scrabble-nwl23-shadow.bin) $(@D)/play_site/roms/shadow-nwl.bin
        cp $(location out/scrabble-csw24-shadow.bin) $(@D)/play_site/roms/shadow-csw.bin
    """,
)
