# Scrabble for Sega Genesis - Main BUILD file

load("//tools:disassembly.bzl", "disassembly_site")
load("//tools:genesis.bzl", "genesis_rom")

package(default_visibility = ["//visibility:public"])

# ---------------------------------------------------------------------------
# Build Configuration Files
# ---------------------------------------------------------------------------

exports_files([
    "linker.ld",
    "linker_debug.ld",
    "data/NWL23.klv16",
    "data/CSW24.klv16",
    "data/lexica/NWL23.kwg",
    "data/lexica/CSW24.kwg",
])

# ---------------------------------------------------------------------------
# ROM Builds (built by Bazel using m68k-elf toolchain)
# ---------------------------------------------------------------------------

# NWL23 variants
genesis_rom(
    name = "nwl23-shadow",
    lexicon = "NWL23",
    kwg_file = "data/lexica/NWL23.kwg",
    klv_file = "data/NWL23.klv16",
    use_shadow = True,
)

genesis_rom(
    name = "nwl23-noshadow",
    lexicon = "NWL23",
    kwg_file = "data/lexica/NWL23.kwg",
    klv_file = "data/NWL23.klv16",
    use_shadow = False,
)

genesis_rom(
    name = "nwl23-hybrid",
    lexicon = "NWL23",
    kwg_file = "data/lexica/NWL23.kwg",
    klv_file = "data/NWL23.klv16",
    use_shadow = True,
    use_hybrid = True,
)

# CSW24 variants
genesis_rom(
    name = "csw24-shadow",
    lexicon = "CSW24",
    kwg_file = "data/lexica/CSW24.kwg",
    klv_file = "data/CSW24.klv16",
    use_shadow = True,
)

genesis_rom(
    name = "csw24-noshadow",
    lexicon = "CSW24",
    kwg_file = "data/lexica/CSW24.kwg",
    klv_file = "data/CSW24.klv16",
    use_shadow = False,
)

genesis_rom(
    name = "csw24-hybrid",
    lexicon = "CSW24",
    kwg_file = "data/lexica/CSW24.kwg",
    klv_file = "data/CSW24.klv16",
    use_shadow = True,
    use_hybrid = True,
)

# Timing variants (with instrumentation for profiling)
genesis_rom(
    name = "nwl23-shadow-timing",
    lexicon = "NWL23",
    kwg_file = "data/lexica/NWL23.kwg",
    klv_file = "data/NWL23.klv16",
    use_shadow = True,
    collect_move_stats = True,
)

genesis_rom(
    name = "nwl23-noshadow-timing",
    lexicon = "NWL23",
    kwg_file = "data/lexica/NWL23.kwg",
    klv_file = "data/NWL23.klv16",
    use_shadow = False,
    collect_move_stats = True,
)

genesis_rom(
    name = "nwl23-hybrid-timing",
    lexicon = "NWL23",
    kwg_file = "data/lexica/NWL23.kwg",
    klv_file = "data/NWL23.klv16",
    use_shadow = True,
    use_hybrid = True,
    collect_move_stats = True,
)

genesis_rom(
    name = "csw24-shadow-timing",
    lexicon = "CSW24",
    kwg_file = "data/lexica/CSW24.kwg",
    klv_file = "data/CSW24.klv16",
    use_shadow = True,
    collect_move_stats = True,
)

genesis_rom(
    name = "csw24-noshadow-timing",
    lexicon = "CSW24",
    kwg_file = "data/lexica/CSW24.kwg",
    klv_file = "data/CSW24.klv16",
    use_shadow = False,
    collect_move_stats = True,
)

genesis_rom(
    name = "csw24-hybrid-timing",
    lexicon = "CSW24",
    kwg_file = "data/lexica/CSW24.kwg",
    klv_file = "data/CSW24.klv16",
    use_shadow = True,
    use_hybrid = True,
    collect_move_stats = True,
)

# Debug variants (with DWARF symbols for disassembly)
genesis_rom(
    name = "nwl23-shadow-debug",
    lexicon = "NWL23",
    kwg_file = "data/lexica/NWL23.kwg",
    klv_file = "data/NWL23.klv16",
    use_shadow = True,
    debug = True,
)

genesis_rom(
    name = "csw24-shadow-debug",
    lexicon = "CSW24",
    kwg_file = "data/lexica/CSW24.kwg",
    klv_file = "data/CSW24.klv16",
    use_shadow = True,
    debug = True,
)

# ---------------------------------------------------------------------------
# Convenience filegroups
# ---------------------------------------------------------------------------

filegroup(
    name = "roms_nwl23",
    srcs = [
        ":nwl23-shadow",
        ":nwl23-noshadow",
        ":nwl23-hybrid",
    ],
)

filegroup(
    name = "roms_csw24",
    srcs = [
        ":csw24-shadow",
        ":csw24-noshadow",
        ":csw24-hybrid",
    ],
)

filegroup(
    name = "all_roms",
    srcs = [
        ":roms_nwl23",
        ":roms_csw24",
    ],
)

# ---------------------------------------------------------------------------
# Source files (for disassembly)
# ---------------------------------------------------------------------------

filegroup(
    name = "genesis_sources",
    srcs = glob([
        "src/*.c",
        "src/*.s",
        "inc/*.h",
    ]),
)

# ---------------------------------------------------------------------------
# Disassembly Explorer Sites
# ---------------------------------------------------------------------------
#
# These generate browsable HTML sites with mixed C/assembly listings.
# Build with: bazel build //:disasm_nwl23_shadow
# Output: bazel-bin/disasm_nwl23_shadow/ (directory with HTML files)

disassembly_site(
    name = "disasm_nwl23_shadow",
    binary = ":nwl23-shadow-debug_elf_out",
    srcs = [":genesis_sources"],
)

disassembly_site(
    name = "disasm_csw24_shadow",
    binary = ":csw24-shadow-debug_elf_out",
    profile = "profiles/csw24-shadow.profile.json",
    srcs = [":genesis_sources"],
)
