# Scrabble Genesis ROM Tests

package(default_visibility = ["//visibility:public"])

exports_files(["scrabble_symbols.h"])

# ---------------------------------------------------------------------------
# Combined Correctness and Performance Tests
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    # Exclude Validation.* tests (run separately via scrabble_validation_test)
    args = ["--gtest_filter=-Validation.*"],
    data = [
        "//:out/scrabble-nwl23-shadow.bin",
        "//:out/scrabble-nwl23-noshadow.bin",
        "//:out/scrabble-csw24-shadow.bin",
        "//:out/scrabble-csw24-noshadow.bin",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"out/scrabble-nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"out/scrabble-nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"out/scrabble-csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"out/scrabble-csw24-noshadow.bin\\"',
    ],
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# 100-Game Validation Test (for MULT_SMALL debug assertions)
# Build ROMs with: make debug
# Run with: bazel test //tests/gxtest:scrabble_validation_test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_validation_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    args = ["--gtest_filter=Validation.*"],
    data = [
        "//:out/scrabble-nwl23-shadow.bin",
        "//:out/scrabble-nwl23-noshadow.bin",
        "//:out/scrabble-csw24-shadow.bin",
        "//:out/scrabble-csw24-noshadow.bin",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"out/scrabble-nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"out/scrabble-nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"out/scrabble-csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"out/scrabble-csw24-noshadow.bin\\"',
    ],
    # Longer timeout for 100 games
    timeout = "long",
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# CPU Cycle Profiling Test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_profile_test",
    srcs = [
        "scrabble_profile_test.cpp",
        "scrabble_symbols.h",
    ],
    data = [
        "//:out/scrabble-nwl23-shadow.bin",
        "//:out/scrabble-nwl23-noshadow.bin",
        "//:out/scrabble-csw24-shadow.bin",
        "//:out/scrabble-csw24-noshadow.bin",
        "//:build/nwl23-shadow/scrabble.elf",
        "//:build/nwl23-noshadow/scrabble.elf",
        "//:build/csw24-shadow/scrabble.elf",
        "//:build/csw24-noshadow/scrabble.elf",
        # Debug ELFs with DWARF symbols (for address histogram export)
        "//:build/nwl23-shadow-debug/scrabble.elf",
        "//:build/csw24-shadow-debug/scrabble.elf",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"out/scrabble-nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"out/scrabble-nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"out/scrabble-csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"out/scrabble-csw24-noshadow.bin\\"',
    ],
    # Manual tag excludes this from `bazel test //...` - must be run explicitly
    tags = ["manual"],
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)
