# Scrabble Genesis ROM Tests

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

exports_files(["scrabble_symbols.h"])

# ---------------------------------------------------------------------------
# KLV16 Reader Library
# ---------------------------------------------------------------------------

cc_library(
    name = "klv",
    srcs = ["klv.cpp"],
    hdrs = ["klv.h"],
)

cc_test(
    name = "klv_test",
    srcs = ["klv_test.cpp"],
    data = [
        "//:data/NWL23.klv16",
        "//:data/CSW24.klv16",
    ],
    defines = [
        'KLV_NWL23=\\"data/NWL23.klv16\\"',
        'KLV_CSW24=\\"data/CSW24.klv16\\"',
    ],
    deps = [
        ":klv",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# Combined Correctness and Performance Tests
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    # Exclude Validation.* and Hybrid.* tests (run separately)
    args = ["--gtest_filter=-Validation.*:Hybrid.*"],
    data = [
        "//:out/scrabble-nwl23-shadow.bin",
        "//:out/scrabble-nwl23-noshadow.bin",
        "//:out/scrabble-csw24-shadow.bin",
        "//:out/scrabble-csw24-noshadow.bin",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"out/scrabble-nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"out/scrabble-nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"out/scrabble-csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"out/scrabble-csw24-noshadow.bin\\"',
    ],
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# Hybrid ROM Validation Tests
# Validates that hybrid ROMs:
# 1. Produce identical scores to shadow and noshadow variants
# 2. Are at least as fast as min(shadow, noshadow) on every game
# Build ROMs with: make nwl23-hybrid csw24-hybrid nwl23-shadow nwl23-noshadow csw24-shadow csw24-noshadow
# Run with: bazel test //tests/gxtest:scrabble_hybrid_test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_hybrid_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    args = ["--gtest_filter=Hybrid.*"],
    data = [
        "//:out/scrabble-nwl23-shadow.bin",
        "//:out/scrabble-nwl23-noshadow.bin",
        "//:out/scrabble-nwl23-hybrid.bin",
        "//:out/scrabble-csw24-shadow.bin",
        "//:out/scrabble-csw24-noshadow.bin",
        "//:out/scrabble-csw24-hybrid.bin",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"out/scrabble-nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"out/scrabble-nwl23-noshadow.bin\\"',
        'ROM_NWL23_HYBRID=\\"out/scrabble-nwl23-hybrid.bin\\"',
        'ROM_CSW24_SHADOW=\\"out/scrabble-csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"out/scrabble-csw24-noshadow.bin\\"',
        'ROM_CSW24_HYBRID=\\"out/scrabble-csw24-hybrid.bin\\"',
    ],
    # Longer timeout for running all three variants
    timeout = "long",
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# 100-Game Validation Test (for MULT_SMALL debug assertions)
# Build ROMs with: make debug
# Run with: bazel test //tests/gxtest:scrabble_validation_test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_validation_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    args = ["--gtest_filter=Validation.*"],
    data = [
        "//:out/scrabble-nwl23-shadow.bin",
        "//:out/scrabble-nwl23-noshadow.bin",
        "//:out/scrabble-csw24-shadow.bin",
        "//:out/scrabble-csw24-noshadow.bin",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"out/scrabble-nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"out/scrabble-nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"out/scrabble-csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"out/scrabble-csw24-noshadow.bin\\"',
    ],
    # Longer timeout for 100 games
    timeout = "long",
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# 1000-Game Timing Benchmark
# Build ROMs with: make timing-builds
# Run with: bazel test //tests/gxtest:scrabble_timing_test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_timing_test",
    srcs = [
        "scrabble_timing_test.cpp",
    ],
    data = [
        # Shadow timing ROMs and ELFs
        "//:out/scrabble-nwl23-shadow-timing.bin",
        "//:out/scrabble-csw24-shadow-timing.bin",
        "//:build/nwl23-shadow-timing/scrabble.elf",
        "//:build/csw24-shadow-timing/scrabble.elf",
        # NoShadow timing ROMs and ELFs
        "//:out/scrabble-nwl23-noshadow-timing.bin",
        "//:out/scrabble-csw24-noshadow-timing.bin",
        "//:build/nwl23-noshadow-timing/scrabble.elf",
        "//:build/csw24-noshadow-timing/scrabble.elf",
        # Hybrid timing ROMs and ELFs
        "//:out/scrabble-nwl23-hybrid-timing.bin",
        "//:out/scrabble-csw24-hybrid-timing.bin",
        "//:build/nwl23-hybrid-timing/scrabble.elf",
        "//:build/csw24-hybrid-timing/scrabble.elf",
        # KLV files for leave value computation
        "//:data/NWL23.klv16",
        "//:data/CSW24.klv16",
    ],
    defines = [
        # Shadow timing
        'ROM_NWL23_SHADOW_TIMING=\\"out/scrabble-nwl23-shadow-timing.bin\\"',
        'ROM_CSW24_SHADOW_TIMING=\\"out/scrabble-csw24-shadow-timing.bin\\"',
        'ELF_NWL23_SHADOW_TIMING=\\"build/nwl23-shadow-timing/scrabble.elf\\"',
        'ELF_CSW24_SHADOW_TIMING=\\"build/csw24-shadow-timing/scrabble.elf\\"',
        # NoShadow timing
        'ROM_NWL23_NOSHADOW_TIMING=\\"out/scrabble-nwl23-noshadow-timing.bin\\"',
        'ROM_CSW24_NOSHADOW_TIMING=\\"out/scrabble-csw24-noshadow-timing.bin\\"',
        'ELF_NWL23_NOSHADOW_TIMING=\\"build/nwl23-noshadow-timing/scrabble.elf\\"',
        'ELF_CSW24_NOSHADOW_TIMING=\\"build/csw24-noshadow-timing/scrabble.elf\\"',
        # Hybrid timing
        'ROM_NWL23_HYBRID_TIMING=\\"out/scrabble-nwl23-hybrid-timing.bin\\"',
        'ROM_CSW24_HYBRID_TIMING=\\"out/scrabble-csw24-hybrid-timing.bin\\"',
        'ELF_NWL23_HYBRID_TIMING=\\"build/nwl23-hybrid-timing/scrabble.elf\\"',
        'ELF_CSW24_HYBRID_TIMING=\\"build/csw24-hybrid-timing/scrabble.elf\\"',
        # KLV files
        'KLV_NWL23=\\"data/NWL23.klv16\\"',
        'KLV_CSW24=\\"data/CSW24.klv16\\"',
    ],
    # Manual tag excludes from `bazel test //...` - must be run explicitly
    # Eternal timeout for 8000 games (4 variants x 1000 each + 100-game tests)
    tags = ["manual"],
    timeout = "eternal",
    deps = [
        ":klv",
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# HTML Timing Report Generator
# Build ROMs with: make timing-builds
# Run with: bazel run //tests/gxtest:scrabble_timing_report -- -n 100 -o report.html
# ---------------------------------------------------------------------------

cc_binary(
    name = "scrabble_timing_report",
    srcs = [
        "scrabble_timing_report.cpp",
    ],
    data = [
        # Shadow timing ROMs and ELFs
        "//:out/scrabble-nwl23-shadow-timing.bin",
        "//:out/scrabble-csw24-shadow-timing.bin",
        "//:build/nwl23-shadow-timing/scrabble.elf",
        "//:build/csw24-shadow-timing/scrabble.elf",
        # NoShadow timing ROMs and ELFs
        "//:out/scrabble-nwl23-noshadow-timing.bin",
        "//:out/scrabble-csw24-noshadow-timing.bin",
        "//:build/nwl23-noshadow-timing/scrabble.elf",
        "//:build/csw24-noshadow-timing/scrabble.elf",
        # Hybrid timing ROMs and ELFs
        "//:out/scrabble-nwl23-hybrid-timing.bin",
        "//:out/scrabble-csw24-hybrid-timing.bin",
        "//:build/nwl23-hybrid-timing/scrabble.elf",
        "//:build/csw24-hybrid-timing/scrabble.elf",
        # KLV files for leave value computation
        "//:data/NWL23.klv16",
        "//:data/CSW24.klv16",
    ],
    defines = [
        # Shadow timing
        'ROM_NWL23_SHADOW_TIMING=\\"out/scrabble-nwl23-shadow-timing.bin\\"',
        'ROM_CSW24_SHADOW_TIMING=\\"out/scrabble-csw24-shadow-timing.bin\\"',
        'ELF_NWL23_SHADOW_TIMING=\\"build/nwl23-shadow-timing/scrabble.elf\\"',
        'ELF_CSW24_SHADOW_TIMING=\\"build/csw24-shadow-timing/scrabble.elf\\"',
        # NoShadow timing
        'ROM_NWL23_NOSHADOW_TIMING=\\"out/scrabble-nwl23-noshadow-timing.bin\\"',
        'ROM_CSW24_NOSHADOW_TIMING=\\"out/scrabble-csw24-noshadow-timing.bin\\"',
        'ELF_NWL23_NOSHADOW_TIMING=\\"build/nwl23-noshadow-timing/scrabble.elf\\"',
        'ELF_CSW24_NOSHADOW_TIMING=\\"build/csw24-noshadow-timing/scrabble.elf\\"',
        # Hybrid timing
        'ROM_NWL23_HYBRID_TIMING=\\"out/scrabble-nwl23-hybrid-timing.bin\\"',
        'ROM_CSW24_HYBRID_TIMING=\\"out/scrabble-csw24-hybrid-timing.bin\\"',
        'ELF_NWL23_HYBRID_TIMING=\\"build/nwl23-hybrid-timing/scrabble.elf\\"',
        'ELF_CSW24_HYBRID_TIMING=\\"build/csw24-hybrid-timing/scrabble.elf\\"',
        # KLV files
        'KLV_NWL23=\\"data/NWL23.klv16\\"',
        'KLV_CSW24=\\"data/CSW24.klv16\\"',
    ],
    deps = [
        ":klv",
        "//gxtest",
    ],
)

# ---------------------------------------------------------------------------
# CPU Cycle Profiling Test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_profile_test",
    srcs = [
        "scrabble_profile_test.cpp",
        "scrabble_symbols.h",
    ],
    data = [
        "//:out/scrabble-nwl23-shadow.bin",
        "//:out/scrabble-nwl23-noshadow.bin",
        "//:out/scrabble-csw24-shadow.bin",
        "//:out/scrabble-csw24-noshadow.bin",
        "//:build/nwl23-shadow/scrabble.elf",
        "//:build/nwl23-noshadow/scrabble.elf",
        "//:build/csw24-shadow/scrabble.elf",
        "//:build/csw24-noshadow/scrabble.elf",
        # Debug ELFs with DWARF symbols (for address histogram export)
        "//:build/nwl23-shadow-debug/scrabble.elf",
        "//:build/csw24-shadow-debug/scrabble.elf",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"out/scrabble-nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"out/scrabble-nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"out/scrabble-csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"out/scrabble-csw24-noshadow.bin\\"',
    ],
    # Manual tag excludes this from `bazel test //...` - must be run explicitly
    tags = ["manual"],
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)
