# Scrabble Genesis ROM Tests

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# ---------------------------------------------------------------------------
# Config Settings
# ---------------------------------------------------------------------------

# Enable strict frame count assertions (for GCC 15 builds only)
# Use: bazel test --define=strict_frames=true //tests/gxtest:scrabble_test
config_setting(
    name = "strict_frames",
    define_values = {"strict_frames": "true"},
)

exports_files(["scrabble_symbols.h"])

# ---------------------------------------------------------------------------
# KLV16 Reader Library
# ---------------------------------------------------------------------------

cc_library(
    name = "klv",
    srcs = ["klv.cpp"],
    hdrs = ["klv.h"],
)

cc_test(
    name = "klv_test",
    srcs = ["klv_test.cpp"],
    data = [
        "//:data/NWL23.klv16",
        "//:data/CSW24.klv16",
    ],
    defines = [
        'KLV_NWL23=\\"data/NWL23.klv16\\"',
        'KLV_CSW24=\\"data/CSW24.klv16\\"',
    ],
    deps = [
        ":klv",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# Combined Correctness and Performance Tests
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    # Exclude Validation.* and Hybrid.* tests (run separately)
    args = ["--gtest_filter=-Validation.*:Hybrid.*"],
    data = [
        "//:nwl23-shadow",
        "//:nwl23-noshadow",
        "//:csw24-shadow",
        "//:csw24-noshadow",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"csw24-noshadow.bin\\"',
    ] + select({
        ":strict_frames": ["STRICT_FRAME_ASSERTIONS"],
        "//conditions:default": [],
    }),
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# Hybrid ROM Validation Tests
# Validates that hybrid ROMs:
# 1. Produce identical scores to shadow and noshadow variants
# 2. Have total runtime at least as fast as min(shadow, noshadow) across all games
# Run with: bazel test //tests/gxtest:scrabble_hybrid_test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_hybrid_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    args = ["--gtest_filter=Hybrid.*"],
    data = [
        "//:nwl23-shadow",
        "//:nwl23-noshadow",
        "//:nwl23-hybrid",
        "//:csw24-shadow",
        "//:csw24-noshadow",
        "//:csw24-hybrid",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"nwl23-noshadow.bin\\"',
        'ROM_NWL23_HYBRID=\\"nwl23-hybrid.bin\\"',
        'ROM_CSW24_SHADOW=\\"csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"csw24-noshadow.bin\\"',
        'ROM_CSW24_HYBRID=\\"csw24-hybrid.bin\\"',
    ] + select({
        ":strict_frames": ["STRICT_FRAME_ASSERTIONS"],
        "//conditions:default": [],
    }),
    # Longer timeout for running all three variants
    timeout = "long",
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# 100-Game Validation Test (for MULT_SMALL debug assertions)
# Run with: bazel test //tests/gxtest:scrabble_validation_test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_validation_test",
    srcs = [
        "scrabble_test.cpp",
        "scrabble_symbols.h",
    ],
    args = ["--gtest_filter=Validation.*"],
    data = [
        "//:nwl23-shadow",
        "//:nwl23-noshadow",
        "//:csw24-shadow",
        "//:csw24-noshadow",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"csw24-noshadow.bin\\"',
    ],
    # Longer timeout for 100 games
    timeout = "long",
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# 1000-Game Timing Benchmark
# Run with: bazel test //tests/gxtest:scrabble_timing_test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_timing_test",
    srcs = [
        "scrabble_timing_test.cpp",
    ],
    data = [
        # Shadow timing ROMs and ELFs
        "//:nwl23-shadow-timing",
        "//:csw24-shadow-timing",
        "//:nwl23-shadow-timing_elf_out",
        "//:csw24-shadow-timing_elf_out",
        # NoShadow timing ROMs and ELFs
        "//:nwl23-noshadow-timing",
        "//:csw24-noshadow-timing",
        "//:nwl23-noshadow-timing_elf_out",
        "//:csw24-noshadow-timing_elf_out",
        # Hybrid timing ROMs and ELFs
        "//:nwl23-hybrid-timing",
        "//:csw24-hybrid-timing",
        "//:nwl23-hybrid-timing_elf_out",
        "//:csw24-hybrid-timing_elf_out",
        # KLV files for leave value computation
        "//:data/NWL23.klv16",
        "//:data/CSW24.klv16",
    ],
    defines = [
        # Shadow timing
        'ROM_NWL23_SHADOW_TIMING=\\"nwl23-shadow-timing.bin\\"',
        'ROM_CSW24_SHADOW_TIMING=\\"csw24-shadow-timing.bin\\"',
        'ELF_NWL23_SHADOW_TIMING=\\"nwl23-shadow-timing_elf.elf\\"',
        'ELF_CSW24_SHADOW_TIMING=\\"csw24-shadow-timing_elf.elf\\"',
        # NoShadow timing
        'ROM_NWL23_NOSHADOW_TIMING=\\"nwl23-noshadow-timing.bin\\"',
        'ROM_CSW24_NOSHADOW_TIMING=\\"csw24-noshadow-timing.bin\\"',
        'ELF_NWL23_NOSHADOW_TIMING=\\"nwl23-noshadow-timing_elf.elf\\"',
        'ELF_CSW24_NOSHADOW_TIMING=\\"csw24-noshadow-timing_elf.elf\\"',
        # Hybrid timing
        'ROM_NWL23_HYBRID_TIMING=\\"nwl23-hybrid-timing.bin\\"',
        'ROM_CSW24_HYBRID_TIMING=\\"csw24-hybrid-timing.bin\\"',
        'ELF_NWL23_HYBRID_TIMING=\\"nwl23-hybrid-timing_elf.elf\\"',
        'ELF_CSW24_HYBRID_TIMING=\\"csw24-hybrid-timing_elf.elf\\"',
        # KLV files
        'KLV_NWL23=\\"data/NWL23.klv16\\"',
        'KLV_CSW24=\\"data/CSW24.klv16\\"',
    ],
    # Manual tag excludes from `bazel test //...` - must be run explicitly
    # Eternal timeout for 8000 games (4 variants x 1000 each + 100-game tests)
    tags = ["manual"],
    timeout = "eternal",
    deps = [
        ":klv",
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)

# ---------------------------------------------------------------------------
# HTML Timing Report Generator
# Run with: bazel run //tests/gxtest:scrabble_timing_report -- -n 100 -o report.html
# ---------------------------------------------------------------------------

cc_binary(
    name = "scrabble_timing_report",
    srcs = [
        "scrabble_timing_report.cpp",
    ],
    data = [
        # Shadow timing ROMs and ELFs
        "//:nwl23-shadow-timing",
        "//:csw24-shadow-timing",
        "//:nwl23-shadow-timing_elf_out",
        "//:csw24-shadow-timing_elf_out",
        # NoShadow timing ROMs and ELFs
        "//:nwl23-noshadow-timing",
        "//:csw24-noshadow-timing",
        "//:nwl23-noshadow-timing_elf_out",
        "//:csw24-noshadow-timing_elf_out",
        # Hybrid timing ROMs and ELFs
        "//:nwl23-hybrid-timing",
        "//:csw24-hybrid-timing",
        "//:nwl23-hybrid-timing_elf_out",
        "//:csw24-hybrid-timing_elf_out",
        # KLV files for leave value computation
        "//:data/NWL23.klv16",
        "//:data/CSW24.klv16",
    ],
    defines = [
        # Shadow timing
        'ROM_NWL23_SHADOW_TIMING=\\"nwl23-shadow-timing.bin\\"',
        'ROM_CSW24_SHADOW_TIMING=\\"csw24-shadow-timing.bin\\"',
        'ELF_NWL23_SHADOW_TIMING=\\"nwl23-shadow-timing_elf.elf\\"',
        'ELF_CSW24_SHADOW_TIMING=\\"csw24-shadow-timing_elf.elf\\"',
        # NoShadow timing
        'ROM_NWL23_NOSHADOW_TIMING=\\"nwl23-noshadow-timing.bin\\"',
        'ROM_CSW24_NOSHADOW_TIMING=\\"csw24-noshadow-timing.bin\\"',
        'ELF_NWL23_NOSHADOW_TIMING=\\"nwl23-noshadow-timing_elf.elf\\"',
        'ELF_CSW24_NOSHADOW_TIMING=\\"csw24-noshadow-timing_elf.elf\\"',
        # Hybrid timing
        'ROM_NWL23_HYBRID_TIMING=\\"nwl23-hybrid-timing.bin\\"',
        'ROM_CSW24_HYBRID_TIMING=\\"csw24-hybrid-timing.bin\\"',
        'ELF_NWL23_HYBRID_TIMING=\\"nwl23-hybrid-timing_elf.elf\\"',
        'ELF_CSW24_HYBRID_TIMING=\\"csw24-hybrid-timing_elf.elf\\"',
        # KLV files
        'KLV_NWL23=\\"data/NWL23.klv16\\"',
        'KLV_CSW24=\\"data/CSW24.klv16\\"',
    ],
    deps = [
        ":klv",
        "//gxtest",
    ],
)

# ---------------------------------------------------------------------------
# CPU Cycle Profiling Test
# ---------------------------------------------------------------------------

cc_test(
    name = "scrabble_profile_test",
    srcs = [
        "scrabble_profile_test.cpp",
        "scrabble_symbols.h",
    ],
    data = [
        "//:nwl23-shadow",
        "//:nwl23-noshadow",
        "//:csw24-shadow",
        "//:csw24-noshadow",
        "//:nwl23-shadow_elf_out",
        "//:nwl23-noshadow_elf_out",
        "//:csw24-shadow_elf_out",
        "//:csw24-noshadow_elf_out",
        # Debug ELFs with DWARF symbols (for address histogram export)
        "//:nwl23-shadow-debug_elf_out",
        "//:csw24-shadow-debug_elf_out",
    ],
    defines = [
        'ROM_NWL23_SHADOW=\\"nwl23-shadow.bin\\"',
        'ROM_NWL23_NOSHADOW=\\"nwl23-noshadow.bin\\"',
        'ROM_CSW24_SHADOW=\\"csw24-shadow.bin\\"',
        'ROM_CSW24_NOSHADOW=\\"csw24-noshadow.bin\\"',
    ],
    # Manual tag excludes this from `bazel test //...` - must be run explicitly
    tags = ["manual"],
    deps = [
        "//gxtest",
        "@googletest//:gtest_main",
    ],
)
